# Lingoflow

./: README.md
backend/: .env  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3eef5252479d_re_add_tables_with_interests_column.py
backend/src/: api.py  auth.py  auth_utils.py  crud.py  database.py  email_templete.py  main.py  models.py  schemas.py  security.py  story.py  story_engine.py  utils.py
